<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ignacy.myapplication.LoginActivity">



    <LinearLayout
        android:layout_centerHorizontal = "true"
        android:layout_centerVertical = "true"
        android:orientation= "vertical"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content">


        <EditText
            android:inputType = "textEmailAddress"
            android:hint= "@string/loginString1"
            android:id = "@+id/editTextEmail"
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"/>


        <EditText
            android:inputType = "textPassword"
            android:hint= "@string/registerString2"
            android:id = "@+id/editTextPassword"
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"/>


        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="Log in" />

        <TextView
            android:textAlignment = "center"
            android:text = "@string/registerString5"
            android:id = "@+id/textViewSignup"
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            />








    </LinearLayout>



</android.support.constraint.ConstraintLayout>

