<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ignacy.myapplication.RegisterActivity">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="374dp"
            android:layout_height="476dp"
            android:layout_marginRight="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/registerString1"
                android:inputType="textEmailAddress"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="81dp" />


            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextEmail"
                android:hint="@string/registerString2"
                android:inputType="textPassword" />


            <EditText
                android:id="@+id/editName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/editTextPassword"
                android:ems="10"
                android:hint="@string/registerString3"
                android:inputType="textPersonName"
                android:text=""
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="35dp" />

            <EditText
                android:id="@+id/editSurname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editName"
                android:ems="10"
                android:hint="Wpisz swoje nazwisko"
                android:inputType="textPersonName"
                android:text=""
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="100dp" />

            <TextView
                android:id="@+id/textCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/editSurname"
                android:text="@string/registerString4" />


            <Spinner
                android:id="@+id/spinnerCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textCity" />

            <TextView
                android:id="@+id/textGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/spinnerCity"
                android:text="@string/registerString9" />

            <RadioGroup
                android:id="@+id/radioGroupGender"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textGender">

                <RadioButton
                    android:id="@+id/radioButtonMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textGender"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="@string/registerString6" />

                <RadioButton
                    android:id="@+id/radioButtonFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:onClick="onClick"
                    android:text="Kobieta" />



            </RadioGroup>

            <TextView
                android:id="@+id/textGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/radioGroupGender"
                android:text="@string/registerString7" />



            <RadioGroup
                android:id="@+id/radioGroupGroup"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textGroup">

                <RadioButton
                    android:id="@+id/radioButton0m"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textGroup"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="0 Rh-" />

                <RadioButton
                    android:id="@+id/radioButton0p"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:onClick="onClick"
                    android:text="0 Rh+" />

                <RadioButton
                    android:id="@+id/radioButtonAm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:onClick="onClick"
                    android:text="A Rh-" />

                <RadioButton
                    android:id="@+id/radioButtonAp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:onClick="onClick"
                    android:text="A Rh+" />

                <RadioButton
                    android:id="@+id/radioButtonBm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="B Rh-" />

                <RadioButton
                    android:id="@+id/radioButtonBp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:onClick="onClick"
                    android:text="B Rh+" />

                <RadioButton
                    android:id="@+id/radioButtonABm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:onClick="onClick"
                    android:text="AB Rh-" />

                <RadioButton
                    android:id="@+id/radioButtonABp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"


                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="AB Rh+" />



            </RadioGroup>

            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/radioGroupGroup"
                android:text="@string/registerString8" />

            <TextView
                android:id="@+id/textViewSignin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/buttonRegister"
                android:text="@string/registerString10"
                android:textAlignment="center" />



        </RelativeLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
