<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.ignacy.myapplication.MainActivity"
    tools:showIn="@layout/activity_main">


    <RelativeLayout
        android:layout_width="374dp"
        android:layout_height="376dp"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="16dp">

        <Button
            android:id="@+id/buttonInbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:onClick="onClick"
            android:text="@string/contentMainXml4" />

        <Button
            android:id="@+id/buttonList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/buttonInbox"
            android:onClick="onClick"
            android:text="@string/contentMainXml3" />


        <Button
            android:id="@+id/buttonMyData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/buttonList"
            android:onClick="onClick"
            android:text="Moje dane" />

        <Button
            android:id="@+id/buttonMyStats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/buttonMyData"
            android:onClick="onClick"
            android:text="Moje statystyki" />

        <Button
            android:id="@+id/buttonLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button_show_token"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:text="@string/contentMainXml2" />

        <Button
            android:id="@+id/button_show_token"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:text="@string/contentMainXml1" />

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/buttonMyStats"
            android:onClick="onClick"
            android:text="Dodaj nowe pobranie" />


        <TextView
            android:id="@+id/textViewLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/buttonAdd"
            android:text="Lokalizacja: " />


    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
