<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.ignacy.myapplication.MyData"
    tools:showIn="@layout/activity_my_data">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="374dp"
            android:layout_height="476dp"
            tools:layout_editor_absoluteX="5dp"
            tools:layout_editor_absoluteY="16dp">

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/myDataXml1"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="16dp" />

            <TextView
                android:id="@+id/textViewSurname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/myDataXml2"
                android:layout_below="@+id/editTextName2"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="81dp" />

            <EditText
                android:id="@+id/editTextName2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text=""
                android:layout_below="@+id/textViewName"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="35dp" />

            <EditText
                android:id="@+id/editTextSurname2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text=""
                android:layout_below="@+id/textViewSurname"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="100dp" />

            <TextView
                android:id="@+id/textCity2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/editTextSurname2"
                android:text="@string/statsXml5" />


            <Spinner
                android:id="@+id/spinnerCity2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textCity2" />

            <TextView
                android:id="@+id/textViewGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/statsXml6"
                android:layout_below="@+id/spinnerCity2"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="307dp" />

            <RadioGroup
                android:id="@+id/radioGroupGroup2"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textViewGroup">

                <RadioButton
                    android:id="@+id/radioButton0m2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="0 Rh-" />

                <RadioButton
                    android:id="@+id/radioButton0p2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:onClick="onClick"
                    android:text="0 Rh+" />

                <RadioButton
                    android:id="@+id/radioButtonAm2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:onClick="onClick"
                    android:text="A Rh-" />

                <RadioButton
                    android:id="@+id/radioButtonAp2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:onClick="onClick"
                    android:text="A Rh+" />

                <RadioButton
                    android:id="@+id/radioButtonBm2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="B Rh-" />

                <RadioButton
                    android:id="@+id/radioButtonBp2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:onClick="onClick"
                    android:text="B Rh+" />

                <RadioButton
                    android:id="@+id/radioButtonABm2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:onClick="onClick"
                    android:text="AB Rh-" />

                <RadioButton
                    android:id="@+id/radioButtonABp2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"


                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="AB Rh+" />


            </RadioGroup>

            <Button
                android:id="@+id/buttonSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/editTextSurname2"
                android:layout_alignRight="@+id/editTextSurname2"
                android:layout_below="@+id/radioGroupGroup2"
                android:text="@string/statsXml7" />

        </RelativeLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>



